--- a/webserver/public/index.html
+++ b/webserver/public/index.html
@@ -32,7 +32,7 @@
 							<div id="google">
 								<div
 									id="g_id_onload"
-									data-client_id="857601662119-tprnq5hrou1berebnv3ecpgelt0sa0gt.apps.googleusercontent.com"
+									data-client_id="824765375444-hno4rfvf0e5d1lk0qspjcl35rh1m8aqe.apps.googleusercontent.com"
 									data-context="signin"
 									data-ux_mode="popup"
 									data-callback="sendCredentials"
@@ -52,7 +52,7 @@
 							</div>
 							<div id="discord">
 								<a
-									href="https://discord.com/api/oauth2/authorize?client_id=1042527020317413407&redirect_uri=https%3A%2F%2Fdiscord.meucci.party&response_type=code&scope=identify%20guilds.join"
+									href="https://discord.com/api/oauth2/authorize?client_id=1042527020317413407&redirect_uri=https%3A%2F%2Fmeucci.tcdev.xyz&response_type=code&scope=identify%20guilds.join"
 								>
 									<button id="discord-login-button">
 										<img src="./assets/discord-logo.svg" id="discord-logo" width="35" height="35" alt='Discord Logo' />
@@ -67,7 +67,7 @@
 		</div>
 
 		<p class="egg">
-			<a href="https://iquick.me/" class="egg" target="_blank">segretino folle pazzurdo di quick</a>
+			<a href="https://iquick.dev/" class="egg" target="_blank">segretino folle pazzurdo di quick</a>
 		</p>
 		<script src="https://accounts.google.com/gsi/client" async defer></script>
 		<script src="./script.js"></script>
