--- a/webserver/public/index.html
+++ b/webserver/public/index.html
@@ -52,7 +52,7 @@
 							</div>
 							<div id="discord">
 								<a
-									href="https://discord.com/api/oauth2/authorize?client_id=1042527020317413407&redirect_uri=https%3A%2F%2Fmeucci.tcdev.xyz&response_type=code&scope=identify%20guilds.join"
+									href="https://discord.com/api/oauth2/authorize?client_id=1042527020317413407&redirect_uri=https%3A%2F%2Fdiscord.meucci.party&response_type=code&scope=identify%20guilds.join"
 								>
 									<button id="discord-login-button">
 										<img src="./assets/discord-logo.svg" id="discord-logo" width="35" height="35" alt='Discord Logo' />
